--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "smoke-lab-web-app",
 	"version": "0.1.0",
 	"private": true,
+	"peerDependencies": {
+		"react": "^17.0.0 || ^18.0.0",
+		"react-dom": "^17.0.0 || ^18.0.0"
+	},
 	"dependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@emotion/react": "^11.11.1",
@@ -18,8 +22,6 @@
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.1",
 		"js-cookie": "^3.0.5",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
 		"react-i18next": "^13.0.2",
 		"react-redux": "^8.1.1",
 		"react-router-dom": "^6.14.1",
